# moxy-messaging

./: Cargo.toml  README.md  shared_dependencies.md
src/: Cargo.toml  app.rs  build.rs  commands.rs  compile.html  compile.rs  config.rs  config.toml  error.rs  events.rs  index.html  lib.rs  login.html  login.rs  main.rs  messaging.html  messaging.rs  setup.rs  tauri.conf.json  tests.rs  utils.rs
src/compile/: android.rs  ios.rs
src/login/: discord.rs  irc.rs  matrix.rs  signal.rs  sms_android.rs
src/messaging/: discord.rs  irc.rs  matrix.rs  signal.rs  sms_android.rs
src/styles/: compile.css  login.css  main.css  messaging.css  picocss.css
tests/: compile.rs  login.rs  messaging.rs
