[package]
name = "moxie_messaging"
version = "0.1.0"
authors = ["octoshrimpy <octoshrimpy@gmail.com>"]
edition = "2018"

[dependencies]
tauri = "1.4.1"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.serde_json]
version = "1.0"

[build-dependencies]
tauri-build = "1.4.0"

[[bin]]
name = "moxie_messaging"
path = "main.rs"

[workspace]

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1

[target.'cfg(target_os="android")'.dependencies]
android_glue = "0.2"

[target.'cfg(target_os="ios")'.dependencies]
objc = "0.2"
objc-foundation = "0.1"
objc_id = "0.1"
metal = "0.15"
